@@ -53,6 +53,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -896,23 +906,46 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
-comment|/**    * The caller will block until all the log files of the given region server    * have been processed - successfully split or an error is encountered - by an    * available worker region server. This method must only be called after the    * region servers have been brought online.    *    * @param logDir    *          the log directory encoded with a region server name    * @throws IOException    *          if there was an error while splitting any log file    * @return cumulative size of the logfiles split    */
-specifier|public
-name|long
-name|splitLogDistributed
+specifier|private
+name|FileStatus
+index|[]
+name|getFileList
 parameter_list|(
-specifier|final
+name|List
+argument_list|<
 name|Path
-name|logDir
+argument_list|>
+name|logDirs
 parameter_list|)
 throws|throws
 name|IOException
+block|{
+name|List
+argument_list|<
+name|FileStatus
+argument_list|>
+name|fileStatus
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|FileStatus
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Path
+name|hLogDir
+range|:
+name|logDirs
+control|)
 block|{
 name|this
 operator|.
 name|fs
 operator|=
-name|logDir
+name|hLogDir
 operator|.
 name|getFileSystem
 argument_list|(
@@ -926,7 +959,7 @@ name|fs
 operator|.
 name|exists
 argument_list|(
-name|logDir
+name|hLogDir
 argument_list|)
 condition|)
 block|{
@@ -934,37 +967,13 @@ name|LOG
 operator|.
 name|warn
 argument_list|(
-name|logDir
+name|hLogDir
 operator|+
 literal|" doesn't exist. Nothing to do!"
 argument_list|)
 expr_stmt|;
-return|return
-literal|0
-return|;
+continue|continue;
 block|}
-name|MonitoredTask
-name|status
-init|=
-name|TaskMonitor
-operator|.
-name|get
-argument_list|()
-operator|.
-name|createStatus
-argument_list|(
-literal|"Doing distributed log split in "
-operator|+
-name|logDir
-argument_list|)
-decl_stmt|;
-name|status
-operator|.
-name|setStatus
-argument_list|(
-literal|"Checking directory contents..."
-argument_list|)
-expr_stmt|;
 name|FileStatus
 index|[]
 name|logfiles
@@ -973,7 +982,7 @@ name|fs
 operator|.
 name|listStatus
 argument_list|(
-name|logDir
+name|hLogDir
 argument_list|)
 decl_stmt|;
 comment|// TODO filter filenames?
@@ -994,18 +1003,159 @@ name|LOG
 operator|.
 name|info
 argument_list|(
-name|logDir
+name|hLogDir
 operator|+
 literal|" is empty dir, no logs to split"
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+for|for
+control|(
+name|FileStatus
+name|status
+range|:
+name|logfiles
+control|)
+name|fileStatus
+operator|.
+name|add
+argument_list|(
+name|status
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|fileStatus
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+return|return
+literal|null
+return|;
+name|FileStatus
+index|[]
+name|a
+init|=
+operator|new
+name|FileStatus
+index|[
+name|fileStatus
+operator|.
+name|size
+argument_list|()
+index|]
+decl_stmt|;
+return|return
+name|fileStatus
+operator|.
+name|toArray
+argument_list|(
+name|a
+argument_list|)
+return|;
+block|}
+comment|/**    * @param logDir    *            one region sever hlog dir path in .logs    * @throws IOException    *             if there was an error while splitting any log file    * @return cumulative size of the logfiles split    */
+specifier|public
+name|long
+name|splitLogDistributed
+parameter_list|(
+specifier|final
+name|Path
+name|logDir
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|List
+argument_list|<
+name|Path
+argument_list|>
+name|logDirs
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|Path
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|logDirs
+operator|.
+name|add
+argument_list|(
+name|logDir
+argument_list|)
+expr_stmt|;
+return|return
+name|splitLogDistributed
+argument_list|(
+name|logDirs
+argument_list|)
+return|;
+block|}
+comment|/**    * The caller will block until all the log files of the given region server    * have been processed - successfully split or an error is encountered - by an    * available worker region server. This method must only be called after the    * region servers have been brought online.    *    * @param logDir    *          the log directory encoded with a region server name    * @throws IOException    *          if there was an error while splitting any log file    * @return cumulative size of the logfiles split    */
+specifier|public
+name|long
+name|splitLogDistributed
+parameter_list|(
+specifier|final
+name|List
+argument_list|<
+name|Path
+argument_list|>
+name|logDirs
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|MonitoredTask
+name|status
+init|=
+name|TaskMonitor
+operator|.
+name|get
+argument_list|()
+operator|.
+name|createStatus
+argument_list|(
+literal|"Doing distributed log split in "
+operator|+
+name|logDirs
+argument_list|)
+decl_stmt|;
+name|FileStatus
+index|[]
+name|logfiles
+init|=
+name|getFileList
+argument_list|(
+name|logDirs
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|logfiles
+operator|==
+literal|null
+condition|)
 return|return
 literal|0
 return|;
-block|}
 name|status
 operator|.
 name|setStatus
+argument_list|(
+literal|"Checking directory contents..."
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|debug
 argument_list|(
 literal|"Scheduling batch of logs to split"
 argument_list|)
@@ -1021,7 +1171,7 @@ name|info
 argument_list|(
 literal|"started splitting logs in "
 operator|+
-name|logDir
+name|logDirs
 argument_list|)
 expr_stmt|;
 name|long
@@ -1130,7 +1280,7 @@ name|warn
 argument_list|(
 literal|"error while splitting logs in "
 operator|+
-name|logDir
+name|logDirs
 operator|+
 literal|" installed = "
 operator|+
@@ -1153,7 +1303,7 @@ name|IOException
 argument_list|(
 literal|"error or interrupt while splitting logs in "
 operator|+
-name|logDir
+name|logDirs
 operator|+
 literal|" Task = "
 operator|+
@@ -1161,13 +1311,14 @@ name|batch
 argument_list|)
 throw|;
 block|}
-name|status
-operator|.
-name|setStatus
-argument_list|(
-literal|"Checking for orphaned logs in log directory..."
-argument_list|)
-expr_stmt|;
+for|for
+control|(
+name|Path
+name|logDir
+range|:
+name|logDirs
+control|)
+block|{
 if|if
 condition|(
 name|anyNewLogFiles
@@ -1235,6 +1386,7 @@ name|logDir
 argument_list|)
 throw|;
 block|}
+block|}
 name|String
 name|msg
 init|=
@@ -1250,7 +1402,7 @@ name|installed
 operator|+
 literal|" log files in "
 operator|+
-name|logDir
+name|logDirs
 operator|+
 literal|" in "
 operator|+
